--- a/styles/components/button.css
+++ b/styles/components/button.css
@@ -31,8 +31,14 @@ a[role="button"] {
   padding: .5em;
   text-decoration: none;
   color: inherit;
+  background: inherit;
 
   &:not(:disabled) {
     cursor: pointer;
+  }
+  &:disabled,
+  &[aria-disabled="true"] {
+    opacity: .33;
+    pointer-events: none;
   }
 }
