--- a/styles/components/radio.css
+++ b/styles/components/radio.css
@@ -22,13 +22,19 @@ input[type="radio"] {
   vertical-align: middle;
   background-repeat: no-repeat;
   background-position: center center;
+  accent-color: currentColor;
+  color: inherit;
 
   &:checked {
-    background-color: black;
+    background-color: currentColor;
     background-image: url('data:image/svg+xml;charset=UTF-8,<svg width="16" height="16" viewBox="0 0 16 16" fill="white" xmlns="http://www.w3.org/2000/svg"><circle cx="8" cy="8" r="5" /></svg>');
   }
 
   &:not(:disabled) {
     cursor: pointer;
+  }
+  &:disabled {
+    opacity: .33;
+    pointer-events: none;
   }
 }
