--- a/styles/main.css
+++ b/styles/main.css
@@ -6,3 +6,4 @@
 @import "./components/select.css";
 @import "./components/checkbox.css";
 @import "./components/radio.css";
+@import "./components/slider.css";
