--- a/styles/main.css
+++ b/styles/main.css
@@ -7,3 +7,4 @@
 @import "./components/checkbox.css";
 @import "./components/radio.css";
 @import "./components/slider.css";
+@import "./components/input.css";
