--- a/styles/components/select.css
+++ b/styles/components/select.css
@@ -22,10 +22,12 @@ select {
   border: solid 1px;
   background: url('data:image/svg+xml;charset=UTF-8,<svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="m8 9.586 5.293-5.293a1 1 0 1 1 1.414 1.414l-6 6a1 1 0 0 1-1.414 0l-6-6a1 1 0 0 1 1.414-1.414L8 9.586Z" fill="black"/></svg>') no-repeat center right .5em;
   color: inherit;
+  display: block;
 
   &:not(:disabled) {
     cursor: pointer;
   }
+
   &:disabled {
     opacity: .33;
     pointer-events: none;
