--- a/styles/components/slider.css
+++ b/styles/components/slider.css
@@ -22,6 +22,7 @@ input[type="range"] {
   vertical-align: middle;
   accent-color: currentColor;
   width: 100%;
+  height: 1.5em;
   display: block;
 
   &::-webkit-slider-runnable-track {
@@ -62,6 +63,7 @@ input[type="range"] {
     border: 1px solid currentColor;
     border-radius: 50%;
     cursor: pointer;
+    box-sizing: border-box;
   }
 
   &:not(:disabled) {
