--- a/styles/components/slider.css
+++ b/styles/components/slider.css
@@ -14,6 +14,7 @@ Possible HTML elements
 */
 input[type="range"] {
   --color-background: white;
+  --track-height: 1px;
 
   margin: 0;
   color: currentColor;
@@ -24,17 +25,17 @@ input[type="range"] {
   width: 100%;
   height: 1.5em;
   display: block;
+  cursor: pointer;
 
   &::-webkit-slider-runnable-track {
     background: currentColor;
     border: 0;
     width: 100%;
-    height: 1px;
-    cursor: pointer;
+    height: var(--track-height);
   }
 
   &::-webkit-slider-thumb {
-    margin-top: calc(-1.5em / 2);
+    margin-top: calc((-1.5em + var(--track-height)) / 2);
     width: 1.5em;
     height: 1.5em;
     background: var(--color-background);
@@ -52,8 +53,7 @@ input[type="range"] {
     background: currentColor;
     border: 0;
     width: 100%;
-    height: 1px;
-    cursor: pointer;
+    height: var(--track-height);
   }
 
   &::-moz-range-thumb {
