--- a/styles/main.css
+++ b/styles/main.css
@@ -8,3 +8,4 @@
 @import "./components/radio.css";
 @import "./components/slider.css";
 @import "./components/input.css";
+@import "./components/progress.css";
