--- a/styles/main.css
+++ b/styles/main.css
@@ -9,3 +9,5 @@
 @import "./components/slider.css";
 @import "./components/input.css";
 @import "./components/progress.css";
+@import "./components/dialog.css";
+@import "./components/tooltip.css";
