--- a/_includes/normalize/normalize.css
+++ b/_includes/normalize/normalize.css
@@ -1,5 +1,8 @@
 @import "https://cdn.jsdelivr.net/npm/modern-normalize/modern-normalize.css";
 
+:focus {
+  z-index: 1;
+}
 :focus-visible {
   outline-width: 1px;
   outline-offset: 2px;
