--- a/_includes/normalize/components/button.css
+++ b/_includes/normalize/components/button.css
@@ -33,7 +33,7 @@ a[role="button"] {
   text-align: center;
   border: solid 1px;
   padding: .7em;
-  min-height: 44px;
+  min-height: 2.75em;
   text-decoration: none;
   color: inherit;
   background: inherit;
