--- a/_includes/normalize/main.css
+++ b/_includes/normalize/main.css
@@ -2,6 +2,7 @@
 @import "./normalize.css";
 
 /* Components */
+@import "./components/accordion.css";
 @import "./components/button.css";
 @import "./components/select.css";
 @import "./components/checkbox.css";
