--- a/_includes/main.css
+++ b/_includes/main.css
@@ -12,3 +12,4 @@
 @import "./components/progress.css";
 @import "./components/dialog.css";
 @import "./components/tooltip.css";
+@import "./components/switch.css";
