--- a/_includes/normalize.css
+++ b/_includes/normalize.css
@@ -1,5 +1,9 @@
 @import "https://cdn.jsdelivr.net/npm/modern-normalize/modern-normalize.css";
 
+:root {
+  color-scheme: light dark;
+}
+
 :focus {
   z-index: 1;
 }
