--- a/src/main.css
+++ b/src/main.css
@@ -1,13 +1,12 @@
-/* Basics */
 @import "./normalize.css";
 
-/* Components */
 @import "./components/accordion.css";
 @import "./components/button.css";
 @import "./components/select.css";
 @import "./components/checkbox.css";
 @import "./components/radio.css";
 @import "./components/slider.css";
+@import "./components/separator.css";
 @import "./components/input.css";
 @import "./components/progress.css";
 @import "./components/dialog.css";
