--- a/src/components/checkbox.css
+++ b/src/components/checkbox.css
@@ -15,16 +15,19 @@ Possible HTML elements
 - <input type="checkbox">
 */
 input[type="checkbox"] {
-  --check-image: url('data:image/svg+xml;charset=UTF-8,<svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path d="M13.92 3c.297 0 .552.109.763.326.211.217.317.48.317.786 0 .307-.107.57-.32.79l-7.56 7.777a1.02 1.02 0 0 1-.76.321 1.03 1.03 0 0 1-.768-.321l-4.28-4.394A1.09 1.09 0 0 1 1 7.495c0-.307.106-.57.317-.787.21-.217.466-.325.764-.325s.555.11.77.33l3.51 3.611 6.79-6.994c.213-.22.47-.33.768-.33Z" /></svg>');
-  --check-color: white;
-  --indeterminate-image: url('data:image/svg+xml;charset=UTF-8,<svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path d="M1 8a1 1 0 0 1 1-1h12a1 1 0 1 1 0 2H2a1 1 0 0 1-1-1Z" /></svg>');
-  --indeterminate-color: var(--check-color);
+  --image-checked: url('data:image/svg+xml;charset=UTF-8,<svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path d="M13.92 3c.297 0 .552.109.763.326.211.217.317.48.317.786 0 .307-.107.57-.32.79l-7.56 7.777a1.02 1.02 0 0 1-.76.321 1.03 1.03 0 0 1-.768-.321l-4.28-4.394A1.09 1.09 0 0 1 1 7.495c0-.307.106-.57.317-.787.21-.217.466-.325.764-.325s.555.11.77.33l3.51 3.611 6.79-6.994c.213-.22.47-.33.768-.33Z" /></svg>');
+  --image-indeterminate: url('data:image/svg+xml;charset=UTF-8,<svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path d="M1 8a1 1 0 0 1 1-1h12a1 1 0 1 1 0 2H2a1 1 0 0 1-1-1Z" /></svg>');
+
+  --color-off: Canvas;
+  --color-on: AccentColor;
+  --color-check: Canvas;
 
   appearance: none;
   width: 1.5em;
   height: 1.5em;
-  border: solid 1px;
+  border: solid 1px var(--color-on);
   vertical-align: middle;
+  background-color: var(--color-off);
   background-repeat: no-repeat;
   background-position: center center;
   color: inherit;
@@ -42,17 +45,17 @@ input[type="checkbox"] {
 
   &:checked,
   &:indeterminate {
-    background-color: currentColor;
+    background-color: var(--color-on);
   }
 
   &:checked::before {
-    mask-image: var(--check-image);
-    background-color: var(--check-color);
+    mask-image: var(--image-checked);
+    background-color: var(--color-check);
   }
 
   &:indeterminate::before {
-    mask-image: var(--indeterminate-image);
-    background-color: var(--indeterminate-color);
+    mask-image: var(--image-indeterminate);
+    background-color: var(--color-check);
   }
 
   &:not(:disabled) {
